# shuvmcp

./: pyproject.toml
fastmcp_slim/: NOTICE  pyproject.toml
fastmcp_slim/fastmcp/: __init__.py  _install_hints.py
fastmcp_slim/fastmcp/client/sampling/handlers/: anthropic.py  google_genai.py  openai.py
fastmcp_slim/fastmcp/server/providers/skills/: _common.py  skill_provider.py
fastmcp_slim/fastmcp/utilities/: skills.py
spec/: skills-as-resources.md
tests/utilities/: test_skills.py
